use "Player Name" to tell users what to enter

--- a/zing-server/assets/index.html
+++ b/zing-server/assets/index.html
@@ -48,7 +48,7 @@
               class="window-height window-width fit row justify-center items-center"
             >
               <q-input
-                label="Name"
+                label="Player Name"
                 v-model="loginname"
                 :autofocus="true"
               ></q-input>
