--- a/zing-server/assets/index.html
+++ b/zing-server/assets/index.html
@@ -122,7 +122,7 @@
           </q-page>
 
           <q-page v-else>
-            <canvas id="gamecanvas"></canvas>
+            <canvas id="gamecanvas" class="fit"></canvas>
           </q-page>
         </q-page-container>
       </q-layout>
